--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
@@ -2,21 +2,23 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="5dp">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="100">
         <ImageView
             android:src="@drawable/hafan"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:id="@+id/photoImageView"
-            android:layout_weight="80" />
+            android:layout_weight="90" />
         <Button
             android:text="Odfotiť"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:layout_height="0dp"
             android:id="@+id/captureImage"
             android:layout_gravity="bottom"
             android:layout_marginBottom="60dp" />
