--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
@@ -48,6 +48,11 @@
                     android:id="@+id/rbDeratizaciaZvierat"
                     android:textSize="20sp" />
             </RadioGroup>
+            <LinearLayout
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="0px"
+                android:layout_height="0px" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
