--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
@@ -3,24 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp">
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="100">
+        android:layout_height="match_parent">
         <ImageView
             android:src="@drawable/hafan"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:id="@+id/photoImageView"
-            android:layout_weight="90" />
+            android:layout_marginBottom="55dp" />
         <Button
-            android:text="Odfotiť"
-            android:layout_width="match_parent"
-            android:layout_weight="10"
-            android:layout_height="0dp"
             android:id="@+id/captureImage"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="60dp" />
-    </LinearLayout>
+            android:layout_marginBottom="55dp"
+            android:text="Odfoť"
+            android:textColor="#240523"
+            android:textSize="30sp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_width="126dp"
+            android:layout_height="60dp"
+            android:background="@drawable/PhotoImageButtonStyle"
+            android:shadowColor="#A80CA3"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5" />
+    </RelativeLayout>
 </FrameLayout>
