--- a/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
@@ -1,37 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="100">
+    android:layout_height="match_parent">
+
     <fragment
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_weight="70" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="30">
-        <TextView
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/location_text"
-            android:layout_marginBottom="60dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp" />
-        
-        <Button
-            android:text="Zobraz adresu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/captureLocation"
-            android:gravity="center"
-            android:layout_gravity="right"
-            android:layout_marginLeft="20dp" />
-    </LinearLayout>
-</LinearLayout>
+          android:id="@+id/map"
+          android:layout_width="match_parent"
+          android:layout_height="450dp"
+          android:name="com.google.android.gms.maps.SupportMapFragment" />
+
+ 
+    <android.support.design.widget.FloatingActionButton
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      android:id="@+id/fabGps"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/fab_margin"
+      app:backgroundTint="#0096E5"
+      android:src="@drawable/ic_menu_mylocation"/>
+   
+</RelativeLayout>
