Repare marker on long press on map

--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
@@ -38,7 +38,7 @@
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Zber Uhynutých zvierat"
+                    android:text="Zber uhynutých zvierat"
                     android:id="@+id/rbZberUhynutychZvierat"
                     android:textSize="20sp" />
                 <RadioButton
