--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment1.axml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:src="@drawable/hafan"
+            android:src="@drawable/dog3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/photoImageView"
