--- a/PomocZvieratam/PomocZvieratam/Resources/layout/nav_header.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/nav_header.axml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Odchyt Zvierat"
+        android:text="ANIMAL RESCUE SK"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#000"
         android:layout_gravity="bottom|center" />
