--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Main.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Main.axml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent"
+  >
     <include
         layout="@layout/include_list_viewpager" />
     <android.support.design.widget.NavigationView
