--- a/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
@@ -2,21 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <fragment
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="450dp"
-          android:name="com.google.android.gms.maps.SupportMapFragment" />
-
- 
-    <android.support.design.widget.FloatingActionButton
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      android:id="@+id/fabGps"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/fab_margin"
-      app:backgroundTint="#0096E5"
-      android:src="@drawable/ic_menu_mylocation"/>
-   
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fabGps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="#0096E5"
+        android:src="@drawable/ic_menu_mylocation" />
 </RelativeLayout>
