--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Fragment3.axml
@@ -48,6 +48,25 @@
                     android:id="@+id/rbDeratizaciaZvierat"
                     android:textSize="20sp" />
             </RadioGroup>
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rgDeratizacia"
+                android:layout_marginLeft="25dp"
+                android:visibility="gone">
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Firma"
+                    android:id="@+id/rbDeratizaciaFirmy"
+                    android:textSize="15sp" />
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Dom/Byt"
+                    android:id="@+id/rbDeratizaciaDomu"
+                    android:textSize="15sp" />
+            </RadioGroup>
             <LinearLayout
                 android:focusable="true"
                 android:focusableInTouchMode="true"
