--- a/PomocZvieratam/PomocZvieratam/Resources/layout/Main.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/Main.axml
@@ -4,7 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-  >
+                                        android:fitsSystemWindows="true">
     <include
         layout="@layout/include_list_viewpager" />
     <android.support.design.widget.NavigationView
