--- a/PomocZvieratam/PomocZvieratam/Resources/menu/drawer_view.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/menu/drawer_view.axml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/nav_friends"
         android:icon="@drawable/ic_dashboard"
-        android:title="Obrázok" />
+        android:title="Fotografia" />
       </menu>
     </item>
   </group>
