--- a/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
+++ b/PomocZvieratam/PomocZvieratam/Resources/layout/MapFragment.axml
@@ -5,7 +5,8 @@
     <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
+        
         android:name="com.google.android.gms.maps.SupportMapFragment" />
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/fabGps"
